# space-invaders-3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
assets/bitmaps/: laser  laser_cannon  small_invader  ufo  wall
assets/shaders/: mesh.vs  model.fs  model.vs
docs/images/: coding_in_progress.png~
engine/: CMakeLists.txt
engine/last_src/: Camera.hpp  CoordinateSystem.hpp  Invaders.cpp  Invaders.hpp  Lasers.cpp  Lasers.hpp  Mesh.cpp  Program.hpp  Utils.cpp  Vertex.hpp
engine/lib/: CMakeLists.txt
engine/lib/glad/: CMakeLists.txt
engine/lib/glad/include/glad/: glad.h
engine/src/: Bitmap3D.cpp  Bitmap3D.hpp  Box.cpp  Box.hpp  Cannon.cpp  Cannon.hpp  Color.hpp  Debug.hpp  Engine.hpp  Graphics.cpp  Graphics.hpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  RNG.cpp  RNG.hpp  RenderSystem.hpp  Utils.cpp  Utils.hpp
game/: CMakeLists.txt  last_main.cpp
game/src/: Actor.cpp  Actor.hpp  Cannon.cpp  Cannon.hpp  Collidable.hpp  Event.hpp  EventListener.hpp  Game.cpp  Game.hpp  Invader.cpp  Invader.hpp  InvadersManager.cpp  InvadersManager.hpp  Laser.cpp  Laser.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Tag.hpp  Tags.hpp  Ufo.cpp  Ufo.hpp  UfoSpawner.cpp  UfoSpawner.hpp  Wall.cpp  Wall.hpp  main.cpp
lib/: CMakeLists.txt
lib/glad/src/: glad.c
release/: CMakeLists.txt
src/: Animation.hpp  Bitmap3D.hpp  Box.hpp  Camera.cpp  Cannon.cpp  Cannon.hpp  CoordinateSystem.hpp  Debug.hpp  Engine.cpp  Engine.hpp  Input.cpp  Input.hpp  Invaders.cpp  Invaders.hpp  Keyboard.cpp  Keyboard.hpp  Laser.cpp  Laser.hpp  LaserCannon.cpp  LaserCannon.hpp  Lasers.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Program.cpp  Program.hpp  Utils.cpp  Utils.hpp  main.cpp
